<resources>
    <string name="app_name">Cities app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment_menu">Start</string>
    <string name="list_fragment_menu">List of elements</string>
    <string name="swipe_fragment_menu">Preferences</string>
    <string name="drawer_header_text">Laboratory 4 application</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="list_fragment_header">List Fragment</string>
    <string name="list_item_name">Item Name</string>
    <string name="list_item_description">Item description</string>
    <string name="main_title">Cities App</string>
    <string name="app_creator">Dawid Walkiewicz</string>
    <string name="edit_main_title">Edit main title</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="edit_main_description">Edit main description</string>
    <string name="start_screen_set_button">Set</string>
    <string name="theme_1">Theme 1</string>
    <string name="theme_2">Theme 2</string>
    <string name="theme_options">Chose app theme</string>
    <string name="item_title_text">Item title</string>
    <string name="item_description_text">Item description</string>
    <string name="item_province_text">Province</string>
    <string name="item_population_text">Population</string>
    <string name="item_area_text">Area</string>
    <string name="return_button">Return</string>
    <string name="add_item_text">Add item</string>
    <string name="item_name">City name</string>
    <string name="item_description">City description</string>
    <string name="item_province">Province</string>
    <string name="item_population">Population</string>
    <string name="item_area">Area</string>
    <string name="item_size">Choose city size</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="small_city_text">Small city</string>
    <string name="average_city_text">Average city</string>
    <string name="big_city_text">Big city</string>
</resources>