<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemFragment">

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="text"
        android:textSize="24sp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/item_description"
        android:inputType="textMultiLine"
        android:lines="1"
        android:maxLines="3"
        android:textSize="24sp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameEditText" />

    <EditText
        android:id="@+id/itemProvinceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/item_province"
        android:inputType="text"
        android:textSize="24sp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDescriptionEditText" />

    <EditText
        android:id="@+id/itemPopulationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/item_population"
        android:inputType="number"
        android:textSize="24sp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemProvinceEditText" />

    <EditText
        android:id="@+id/itemAreaEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/item_area"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPopulationEditText" />

    <TextView
        android:id="@+id/iconTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/item_icon"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAreaEditText" />

    <RadioGroup
        android:id="@+id/itemIconRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconTextView">

        <RadioButton
            android:id="@+id/itemIconType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:drawableEnd="@drawable/ic_new_city_1"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/itemIconType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:drawableEnd="@drawable/ic_new_city_2"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/itemIconType3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:drawableEnd="@drawable/ic_new_city_3"
            android:textSize="24sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:text="@string/save_button"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/cancel_button"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>